DuPont DevSB/src/objects/ccrz__E_OrderShipmentItem__c.object
<CustomObject>
    <description>The E_OrderShipmentItem__c object contains detailed shipment line information for a shipment for an order.</description>
    <fields>
        <fullName>ccrz__OrderShipmentItemId__c</fullName>
        <description>Id for external use.</description>
        <externalId>true</externalId>
        <label>Order Shipment Item Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderShipment__c</fullName>
        <description>The order shipment that this detail line refers to.</description>
        <label>CC Order Shipment</label>
        <referenceTo>ccrz__E_OrderShipment__c</referenceTo>
        <relationshipLabel>CC Order Shipment Items</relationshipLabel>
        <relationshipName>E_OrderShipmentItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__Quantity__c</fullName>
        <description>The quantity shipped for this line.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__SKU__c</fullName>
        <description>The SKU of the item shipped for this line.</description>
        <label>SKU</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CC Order Shipment Item</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>CC Order Shipment Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Order Shipment Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>